force-app/main/default/objects/DESKSCMT__Desk_Contact_Migration__c/fields/DESKSCMT__addresses__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT__addresses__c</fullName>
    <label>Addresses</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>