force-app/main/default/objects/DESKSCMT__Desk_Contact_Migration__c/fields/DESKSCMT__Count__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT__Count__c</fullName>
    <label>Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>