force-app/main/default/objects/DESKSCMT__Desk_Contact_Migration__c/fields/DESKSCMT__email__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT__email__c</fullName>
    <label>email</label>
    <type>Email</type>
</CustomField>