force-app/main/default/objects/DESKSCMT__Desk_Contact_Migration__c/fields/DESKSCMT__emails__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT__emails__c</fullName>
    <label>emails</label>
    <type>TextArea</type>
</CustomField>