force-app/main/default/objects/DESKSCMT__Desk_Contact_Migration__c/fields/DESKSCMT__error__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT__error__c</fullName>
    <label>error</label>
    <type>TextArea</type>
</CustomField>