force-app/main/default/objects/DESKSCMT__Desk_Contact_Migration__c/fields/DESKSCMT__FirstName__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT__FirstName__c</fullName>
    <description>null</description>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>