force-app/main/default/objects/DESKSCMT__Desk_Contact_Migration__c/fields/DESKSCMT__LastName__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT__LastName__c</fullName>
    <label>LastName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>