force-app/main/default/objects/DESKSCMT__Desk_Contact_Migration__c/fields/DESKSCMT__MailingStreet__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT__MailingStreet__c</fullName>
    <label>Address</label>
    <type>TextArea</type>
</CustomField>