force-app/main/default/objects/DESKSCMT__Desk_Contact_Migration__c/fields/DESKSCMT__Phone_Numbers__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT__Phone_Numbers__c</fullName>
    <label>Phone Numbers</label>
    <type>TextArea</type>
</CustomField>