force-app/main/default/objects/DESKSCMT__Desk_Contact_Migration__c/fields/DESKSCMT__Title__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT__Title__c</fullName>
    <description>null</description>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>