force-app/main/default/objects/DESKSCMT__Desk_Contact_Migration__c/fields/updated_at__c.field-meta.xml
<CustomField>
    <fullName>updated_at__c</fullName>
    <label>Updated At</label>
    <type>DateTime</type>
</CustomField>