force-app/main/default/objects/DESKSCMT__Desk_Contact_Migration__c/listViews/DESKSCMT__All.listView-meta.xml
<ListView>
    <fullName>DESKSCMT__All</fullName>
    <columns>NAME</columns>
    <columns>DESKSCMT__Desk_Company_Id__c</columns>
    <columns>DESKSCMT__Desk_Customer_Id__c</columns>
    <columns>DESKSCMT__emails__c</columns>
    <columns>DESKSCMT__FirstName__c</columns>
    <columns>DESKSCMT__LastName__c</columns>
    <columns>DESKSCMT__addresses__c</columns>
    <columns>DESKSCMT__Phone_Numbers__c</columns>
    <columns>DESKSCMT__error__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>