force-app/main/default/objects/DESKSCMT__Desk_Contact_Migration__c/listViews/DESKSCMT__Failed_Contacts.listView-meta.xml
<ListView>
    <fullName>DESKSCMT__Failed_Contacts</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>DESKSCMT__Desk_Customer_Id__c</columns>
    <columns>DESKSCMT__error__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DESKSCMT__error__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Failed Contacts</label>
</ListView>